--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -10,3 +10,4 @@ crate-type=["staticlib"]  # Allow linking with foreign languages
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rusqlite = "0.25.0"
