--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -12,3 +12,4 @@ crate-type=["staticlib"]  # Allow linking with foreign languages
 [dependencies]
 rusqlite = "0.25.0"
 walkdir = "2.3.2"
+regex = "1.4.5"
