Add an example of dataflow result for a join query

--- a/doc/design/img/Makefile
+++ b/doc/design/img/Makefile
@@ -1,4 +1,5 @@
-ALL_TARGETS = fdb_crates.png fdb_rustir.png interpreter_df.png interpreter_df3.png
+ALL_TARGETS = fdb_crates.png fdb_rustir.png interpreter_df.png interpreter_df3.png \
+	df_join_fold_final.png
 
 all: $(ALL_TARGETS)
 
