--- a/doc/proto1/Makefile
+++ b/doc/proto1/Makefile
@@ -1,10 +1,7 @@
-ALL_TARGETS = fdb_gen_ir.png ghcdump_ir.png
+ALL_TARGETS = fdb_gen_ir.png ghcdump_ir.png q6_v1.png
 
 all: $(ALL_TARGETS)
 
 
-fdb_gen_ir.png: fdb_gen_ir.dot
-	dot -Tpng fdb_gen_ir.dot -o fdb_gen_ir.png
-
-ghcdump_ir.png: ghcdump_ir.dot
-	dot -Tpng ghcdump_ir.dot -o ghcdump_ir.png
+%.png: %.dot
+	dot -Tpng $< -o $@
